change layout box to add fixed height to show overflow

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -147,7 +147,7 @@
   justify-content: center;
   flex-direction: column;
   width: 23rem;
-  height: auto;
+  height: 31rem;
   padding: 1rem;
   margin: 1rem;
   border-radius: 2rem 0 2rem 0;
@@ -175,6 +175,7 @@
   flex-wrap: wrap;
   margin: 0.7rem 0 0.7rem;
   gap: 0.5rem;
+  padding: 0.7rem;
 }
 
 .LinkVideo span {
@@ -224,6 +225,10 @@
   text-align: center;
 }
 
+.ContainerTitle h3 {
+  cursor: pointer;
+}
+
 .ColorBottomTitle {
   background: linear-gradient(to right, #2ecc71, #3498db);
   height: 0.2rem;
@@ -236,9 +241,13 @@
   color: var(--white-full);
   line-height: 1.3rem;
   font-size: 1.2rem;
-  padding: 0.2rem;
+  padding: 0.7rem;
   text-align: justify;
   font-weight: 200;
+}
+
+.DescriptionProject {
+  overflow-y: auto;
 }
 
 .RedirectProject {
